app routing standalone components

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /standaloneComponents/node_modules
 /standaloneComponents/.angular
 /standaloneComponentsRouting/node_modules
+/standaloneComponentsRouting/.angular
