fix bug http request + deployment

--- a/courseProject/courseProject/firebase.json
+++ b/courseProject/courseProject/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist/course-project",
+    "public": "dist/course-project/browser",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -9,7 +9,7 @@
     "rewrites": [
       {
         "source": "**",
-        "destination": "index.html"
+        "destination": "/index.html"
       }
     ]
   }
