--- a/courseProject/courseProject/package.json
+++ b/courseProject/courseProject/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@ngrx/effects": "^17.1.1",
+    "@ngrx/router-store": "^17.1.1",
     "@ngrx/store": "^17.1.1",
     "bootstrap": "^3.4.1",
     "rxjs": "~7.8.0",
@@ -28,6 +30,7 @@
     "@angular-devkit/build-angular": "^17.1.3",
     "@angular/cli": "^17.1.3",
     "@angular/compiler-cli": "^17.1.0",
+    "@ngrx/store-devtools": "^17.1.1",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
