--- a/courseProject/courseProject/package.json
+++ b/courseProject/courseProject/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "serve:ssr:courseProject": "node dist/course-project/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -17,11 +18,14 @@
     "@angular/forms": "^17.1.0",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
+    "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@angular/ssr": "^17.2.0",
     "@ngrx/effects": "^17.1.1",
     "@ngrx/router-store": "^17.1.1",
     "@ngrx/store": "^17.1.1",
     "bootstrap": "^3.4.1",
+    "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -31,7 +35,9 @@
     "@angular/cli": "^17.1.3",
     "@angular/compiler-cli": "^17.1.0",
     "@ngrx/store-devtools": "^17.1.1",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
